--- a/01-reforzamiento/package.json
+++ b/01-reforzamiento/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vite-typescript-starter",
+  "name": "01-reforzamiento",
   "private": true,
   "version": "0.0.0",
   "type": "module",
